Verifica funcion del checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/3936/premium/3936744.png?token=exp=1655333356~hmac=33a32bdf6662377bb27671f1c6523176" />
     <link rel="stylesheet" href="https://bootswatch.com/5/simplex/bootstrap.min.css"/>
     <meta name="description" content="Web site created using create-react-app" />
     <title>App</title>
